tech-debt :: updated code to use path.of