@@ -8,7 +8,6 @@ import picocli.CommandLine.ITypeConverter;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class FileExistsConverter implements ITypeConverter<File> {
     private final String optionName;
@@ -24,7 +23,7 @@ public class FileExistsConverter implements ITypeConverter<File> {
 
     @Override
     public File convert(String value) {
-        Path p = Paths.get(value);
+        Path p = Path.of(value);
         if (!Files.exists(p)) {
             String msg = String.format("The option '%s' was configured with path '%s' which does not exist", optionName, p);
             LOG.error(msg);
