@@ -5,7 +5,7 @@ import org.apache.commons.io.IOUtils;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 /**
  * KffQuincyFile compares files against the Quincy KFF dataset. The dataset only contains MD5 sums to that's our
@@ -35,7 +35,7 @@ public class KffQuincyFile extends KffFile {
         kff.addAlgorithm("SHA-256");
 
         for (int i = 1; i < args.length; i++) {
-            try (InputStream is = Files.newInputStream(Paths.get(args[i]))) {
+            try (InputStream is = Files.newInputStream(Path.of(args[i]))) {
                 byte[] buffer = IOUtils.toByteArray(is);
 
                 KffResult r = kff.check(args[i], buffer);
