@@ -4,14 +4,13 @@ import emissary.util.shell.Executrix;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class ListOpenFiles {
 
     Executrix exec = new Executrix();
 
     public boolean isOpen(String path) {
-        return isOpen(Paths.get(path));
+        return isOpen(Path.of(path));
     }
 
     public boolean isOpen(Path path) {
